--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   "homepage": "https://github.com/Zleub/Cluedo#readme",
   "dependencies": {
     "bower": "^1.8.0",
-    "director": "^1.2.8"
+    "graphql": "^0.10.3"
   }
 }
