--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "polymer": "^1.9.0",
     "iron-elements": "^1.0.10",
     "paper-input": "^1.0.0",
-    "paper-elements": "^1.0.7"
+    "paper-elements": "^1.0.7",
+    "app-elements": "^1.0.0"
   }
 }
