--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Zleub/Cluedo#readme",
   "dependencies": {
     "bower": "^1.8.0",
+    "chance": "^1.0.10",
     "graphql": "^0.10.3"
   }
 }
