--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "bower": "^1.8.0",
     "chance": "^1.0.10",
-    "colors": "^1.1.2",
+    "colors": "Zleub/colors.js",
     "graphql": "^0.10.3"
   }
 }
